$Id$

2017-11-15  Christian Franke  <franke@computer.org>

	configure.ac: Make some header checks platform specific.
	Print '--with-nvme-devicescan' warning also on FreeBSD.
	Remove '--with-solaris-sparc-ata' warning.

	examplescripts/Example6: Add enhancements from Fedora package.

2017-11-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Western Digital Red: WD80EZZX
	- USB: WD My Book (0x1058:0x25ee) (Red Hat Bugzilla 1446533)

2017-11-13  Matt Coates  <me@mattjackets.com>

	drivedb.h: USB: Seagate Backup Plus 4TB (0x0bc2:0xab43) (#926)

2017-11-10  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: add SanDisk iSSD SDIS6BM (#923)

2017-11-08  Christian Franke  <franke@computer.org>

	Makefile.am, os_win32/installer.nsi: Add VERSIONINFO resource to
	installer.

	os_win32/installer.nsi: Remove get/set of old 'Install_Dir' registry
	entry.  No longer needed for recent versions of GSmartControl.
	Remove deletion of old .exe.manifest files.
	Search also for 64-bit version of Notepad++.

	ataprint.cpp: Fix detection of Device Statistics log with
	256 sectors (#922).

	os_linux.cpp: Use 'realpath()' (BSD, POSIX) instead of
	'canonicalize_file_name()' (GNU extension).
	This fixes build on systems with musl libc (#921).

2017-11-06  Alex Samorukov <samm@os2.kiev.ua>

	os_freebsd.cpp: implement NVMe device scan (#687)
	os_freebsd.cpp: show hint if /dev/nvd* is specified as device name

2017-11-05  Christian Franke  <franke@computer.org>

	configure.ac: Add separate version number for drivedb.h branch.

2017-11-05  Christian Franke  <franke@computer.org>

	smartmontools 6.6

2017-11-04  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Apple SD/SM/TS...E/F/G SSDs: Rename, add 1TB
	- Innodisk 3IE3/3ME3/3ME4 SSDs: Rename, add 3ME4
	- Intel 730 and DC S35x0/3610/3700 Series SSDs: 150GB, *G7
	  (ticket #750)
	- USB: Toshiba Canvio (0x0480:0xa202, 0xa207)
	- USB: Seagate Expansion Desktop (0x0bc2:0x3330)
	- USB: Maxtor D3 Station 3TB (0x0bc2:0x6123)