@@ -2,6 +2,10 @@ $Id$
 
 2017-11-15  Christian Franke  <franke@computer.org>
 
+	configure.ac, Makefile.am: Use smartd.cygwin.initd.in on Cygwin.
+	smartd.cygwin.initd.in: New file.
+	smartd.initd.in: Remove Cygwin section.
+
 	configure.ac: Make some header checks platform specific.
 	Print '--with-nvme-devicescan' warning also on FreeBSD.
 	Remove '--with-solaris-sparc-ata' warning.
